Minor Edits (Major edits to Courses Page)

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -29,26 +29,21 @@
 		</p>
 		<hr>
 		<h2>Resume</h2>
-		<p><a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last Updated 2016)</p>
+		<p><a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last Updated Sept 2017)</p>
 		<hr>
 		<h2>Hobbies</h2>
 		<ul>
-			<li>Reading</li>
+			<li>Reading (Science Fiction and Non-Fiction)</li>
 			<li>Video Games (League of Legends, CS:GO, Starcraft 2)</li>
 			<li>Swimming</li>
-			<li>YouTube</li>
 			<li>Binge watching TV shows and anime</li>
 		</ul>
 		<hr>
 		<h2>Passions</h2>
 		<ul>
 			<li>Philosophy</li>
-			<li>Psychology</li>
-			<li>Science</li>
 			<li>Artificial Intelligence</li>
 			<li>Learning</li>
-			<li>Helping people and humanity</li>
-			<li>EDM Music</li>
 		</ul>
 		<hr>
 		<h2>Random Skills</h2>
