--- a/HTML/couses.html
+++ b/HTML/couses.html
@@ -35,8 +35,6 @@
 			<br>
 			The current software engineering curriculum and course descriptions can be found
 			<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. 
-			Notable courses for employers have been highlighted in orange. Courses such as
-			databases, operating systems, programming fundamentals.
 		</p>
 		<hr>
 		<table>
@@ -53,34 +51,34 @@
 					<th>SUMMER 2016</th>
 				</tr>
 				<tr>
-					<td>ENGG 200</td>
-					<td>ENGG 201</td>
-					<td>ENGG 209</td>
-					<td>ENGG 319</td>
+					<td title="Engineering Design and Communication">ENGG 200</td>
+					<td title="Behaviour of Liquids, Gases and Solids">ENGG 201</td>
+					<td title="Engineering Economics">ENGG 209</td>
+					<td title="Probability and Statistics for Engineers">ENGG 319</td>
 				</tr>
 				<tr>
-					<td class="notable">ENGG 233</td>
-					<td>ENGG 202</td>
-					<td>ENGG 481</td>
-					<td>COMS 363</td>
+					<td title="Computing for Engineers">ENGG 233</td>
+					<td title="Engineering Statics">ENGG 202</td>
+					<td title="Technology and Society">ENGG 481</td>
+					<td title="Professional and Technical Communication">COMS 363</td>
 				</tr>
 				<tr>
-					<td>MATH 211</td>
-					<td>ENGG 225</td>
-					<td></td>
-					<td>MATH 271</td>
+					<td title="Linear Methods I">MATH 211</td>
+					<td title="Fundamentals of Electrical Circuits and Machines">ENGG 225</td>
+					<td title=""></td>
+					<td title="Discrete Mathematics">MATH 271</td>
 				</tr>
 				<tr>
-					<td>MATH 275</td>
-					<td>MATH 277</td>
-					<td></td>
-					<td></td>
+					<td title="Calculus for Engineers and Scientists">MATH 275</td>
+					<td title="Multivariable Calculus for Engineers and Scientists">MATH 277</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td>CHEM 209</td>
-					<td>PHYS 259</td>
-					<td></td>
-					<td></td>
+					<td title="General Chemistry for Engineers">CHEM 209</td>
+					<td title="Electricity and Magnetism (for students in Engineering)">PHYS 259</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 			</tbody>
 		</table>
@@ -99,34 +97,34 @@
 					<th>SUMMER 2017</th>
 				</tr>
 				<tr>
-					<td>ENEL 353</td>
-					<td>ENEL 327</td>
-					<td class="notable">CPSC 457</td>
-					<td></td>
+					<td title="Digital Circuits">ENEL 353</td>
+					<td title="Signals and Transforms">ENEL 327</td>
+					<td title="Principles of Operating Systems">CPSC 457</td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td class="notable">ENCM 339</td>
-					<td class="notable">ENCM 369</td>
-					<td class="notable">CPSC 471</td>
-					<td></td>
+					<td title="Programming Fundamentals">ENCM 339</td>
+					<td title="	Computer Organization">ENCM 369</td>
+					<td title="Data Base Management Systems">CPSC 471</td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td>MATH 375</td>
-					<td class="notable">CPSC 319</td>
-					<td>ENGG 513</td>
-					<td></td>
+					<td title="Differential Equations for Engineers and Scientists">MATH 375</td>
+					<td title="Data Structures, Algorithms, and Their Applications">CPSC 319</td>
+					<td title="The Role and Responsibilities of the Professional Engineer in Society">ENGG 513</td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td>PHYS 365</td>
-					<td class="notable">ENSF 409</td>
-					<td></td>
-					<td></td>
+					<td title="Acoustics, Optics and Modern Physics (for students in Engineering)">PHYS 365</td>
+					<td title="Principles of Software Development">ENSF 409</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td></td>
-					<td>PHIL 279</td>
-					<td></td>
-					<td></td>
+					<td title=""></td>
+					<td title="Logic I">PHIL 279</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 			</tbody>
 		</table>
@@ -145,34 +143,34 @@
 					<th>SUMMER 2018</th>
 				</tr>
 				<tr>
-					<td>ENSF 480</td>
-					<td>SENG 401</td>
-					<td></td>
-					<td></td>
+					<td title="Principles of Software Design">ENSF 480</td>
+					<td title="Software Architecture">SENG 401</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td>ENCM 511</td>
-					<td>SENG 438</td>
-					<td></td>
-					<td></td>
+					<td title="Embedded System Interfacing">ENCM 511</td>
+					<td title="Software Testing, Reliability, and Quality">SENG 438</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td class="notable">ENEL 525</td>
-					<td>SENG 471</td>
-					<td></td>
-					<td></td>
+					<td title="Neuro-Fuzzy and Soft Computing">ENEL 525</td>
+					<td title="Software Requirements Engineering">SENG 471</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td class="notable">CPSC 441</td>
-					<td>CPSC 313</td>
-					<td></td>
-					<td></td>
+					<td title="Computer Networks">CPSC 441</td>
+					<td title="Introduction to Computability">CPSC 313</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td>PHIL 473</td>
-					<td>PHIL 379</td>
-					<td></td>
-					<td></td>
+					<td title="Philosophy of Logic">PHIL 473</td>
+					<td title="Logic II">PHIL 379</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 			</tbody>
 		</table>
@@ -191,33 +189,33 @@
 					<th>SUMMER 2019</th>
 				</tr>
 				<tr>
-					<td>SENG 511</td>
-					<td>SENG 533</td>
-					<td></td>
-					<td></td>
+					<td title="Software Process and Project Management">SENG 511</td>
+					<td title="Software Performance Evaluation">SENG 533</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td colspan="2">ENEL 500</td>
-					<td></td>
-					<td></td>
+					<td title="Computer, Electrical, and Software Engineering Team Design" colspan="2">ENEL 500</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td>ENEL 592</td>
-					<td>ENEL 594</td>
-					<td></td>
-					<td></td>
+					<td title="Undergraduate Research Thesis I">ENEL 592</td>
+					<td title="	Undergraduate Research Thesis II">ENEL 594</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td>CPSC 433</td>
-					<td>CPSC 565</td>
-					<td></td>
-					<td></td>
+					<td title="Artificial Intelligence">CPSC 433</td>
+					<td title="Emergent Computing">CPSC 565</td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 				<tr>
-					<td>[Undecided elective]</td>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td title="">[Undecided elective]</td>
+					<td title=""></td>
+					<td title=""></td>
+					<td title=""></td>
 				</tr>
 			</tbody>
 		</table>
