--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -36,7 +36,7 @@
 			<p><a href="https://github.com/Brian-Pho/Brian-Pho.github.io">Source Code</a></p>
 			<p>
 				This website, the one you're reading this on, is a personal project of mine that I
-				made over my summer break. I wanted to make a website for multiple reasons. The first reason was
+				made from scratch over my summer break. I wanted to make a website for multiple reasons. The first reason was
 				to learn a new programming language (HTML and CSS in this case) and apply it immediately.
 				Second was because I am going to be applying for internships soon and having a website
 				is useful in showcasing my past projects and info about me. Lastly was because I love
