Another Round of Minor Edits

--- a/HTML/couses.html
+++ b/HTML/couses.html
@@ -25,7 +25,7 @@
 		<h1>Courses Taken</h1>
 		<p>
 			I am currently taking a bachelors of science with a major in software engineering. 
-			At the University of Calgary, the semesters run as follows:
+			At the University of Calgary the semesters run as follows:
 			<u1>
 				<li>FALL: Sept - Dec (4 months)</li>
 				<li>WINTER: Jan - Apr (4 months)</li>
@@ -34,7 +34,8 @@
 			</u1>
 			<br>
 			The current software engineering curriculum and course descriptions can be found
-			<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. 
+			<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>.
+			Hover over a course to view its title.
 		</p>
 		<hr>
 		<table>
