--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -39,15 +39,15 @@
 				made from scratch over my summer break. I wanted to make a website for multiple reasons. The first reason was
 				to learn a new programming language (HTML and CSS in this case) and apply it immediately.
 				Second was because I am going to be applying for internships soon and having a website
-				is useful in showcasing my past projects and info about me. Lastly was because I love
+				is useful in showcasing my past projects and info about me. Last reason was because I love
 				programming and find it fun!
 			</p>
 			<p>
 				This is the first time I've programmed in HTML and it's very
-				different from the Java and C programming that I'd previously done. HTML is very similar
+				different from the Java and C programming that I'd previously done. HTML is similar
 				to LaTeX, a language used for note taking, so I learned it quickly. I also owe my knowledge to
 				the textbook <i>HTML and CSS: Design and Build Websites</i> by Jon Duckett. I read this 
-				textbook to learn HTML and it made it really easy for me to understand the concepts.
+				textbook to learn HTML and it made HTML and CSS easy for me to understand.
 				This website is currently hosted using Github Pages. The header 
 				font is Open Sans and the text font is Roboto which are provided by Google Fonts. 
 			</p>
@@ -89,10 +89,10 @@
 			<h2>ENSF 409: Airlines Registration</h2>
 			<p><a href="https://github.com/Sadat21/AirlinesRegistrationSystem">Source Code</a></p>
 			<p>
-				This was my first project that involved the use of a database. This project was
+				This was my first project that involved the use of a database (mySQL). This project was
 				done in a group of three where I had the role of designing the UI for
 				the program. The UI was built using Java and IntelliJ. The purpose of this 
-				program was to connect to an external database (mySQL in this case) and relay
+				program was to connect to an external database and relay
 				information back and forth from the client and server. 
 			</p>
 			<p>
@@ -127,8 +127,8 @@
 			<h2>ENGG 233: Ring Runner Game</h2>
 			<p><a href="https://github.com/Brian-Pho/Ring-Runner-Game">Source Code</a></p>
 			<p>
-				My first major project after taking my first programming course in first year
-				engineering. The project I chose to do was an original game programmed in 
+				My first major project after taking my first programming course. 
+				The project I chose to do was an original game programmed in 
 				Processing; a language based on Java. A notable problem that I had to
 				solve when developing the game was trying to make the ball move in a
 				circular path. The solution was to use sin and cos for the y and x coordinates
