Updated Projects with Dates

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -25,25 +25,25 @@
 		<h1>Projects</h1>
 		<p>
 			The following are projects that I have been involved in. The list is ordered with the most recent project
-			at the top. By ordering the projects chronologically, the progress I've made can be seen. Most of the
+			at the top. By ordering the projects in reverse chronological order the progress I've made can be seen. Most of the
 			projects have been a part of school but this website is a personal endeavor. My GitHub can be found
 			<a href="https://github.com/Brian-Pho"> here</a>.
 		</p>
 		<hr>
 		<!-- Find additional project colors here: http://www.tayloredmktg.com/rgb/ -->
 		<div id=website class=projects>
-			<h2>Personal: Github Pages Website</h2>
+			<h2>Personal: Github Pages Website (July 2017)</h2>
 			<p><a href="https://github.com/Brian-Pho/Brian-Pho.github.io">Source Code</a></p>
 			<p>
 				This website, the one you're reading this on, is a personal project of mine that I
 				made from scratch over my summer break. I wanted to make a website for multiple reasons. The first reason was
 				to learn a new programming language (HTML and CSS in this case) and apply it immediately.
 				Second was because I am going to be applying for internships soon and having a website
-				is useful in showcasing my past projects and info about me. Last reason was because I love
+				is useful in showcasing my past projects and info about me. The last reason was because I love
 				programming and find it fun!
 			</p>
 			<p>
-				This is the first time I've programmed in HTML and it's very
+				This is the first time I've programmed in HTML and it's
 				different from the Java and C programming that I'd previously done. HTML is similar
 				to LaTeX, a language used for note taking, so I learned it quickly. I also owe my knowledge to
 				the textbook <i>HTML and CSS: Design and Build Websites</i> by Jon Duckett. I read this 
@@ -54,7 +54,7 @@
 		</div>
 		<hr>
 		<div id=library class=projects>
-			<h2>CPSC 471: Library Database Management System</h2>
+			<h2>CPSC 471: Library Database Management System (June 2017)</h2>
 			<p><a href="https://github.com/Brian-Pho/Library-App">Source Code</a></p>
 			<p>
 				While this project was part of my database class, it can be thought of as
@@ -86,7 +86,7 @@
 		</div>
 		<hr>
 		<div id=airline class=projects>
-			<h2>ENSF 409: Airlines Registration</h2>
+			<h2>ENSF 409: Airlines Registration (April 2017)</h2>
 			<p><a href="https://github.com/Sadat21/AirlinesRegistrationSystem">Source Code</a></p>
 			<p>
 				This was my first project that involved the use of a database (mySQL). This project was
@@ -108,7 +108,7 @@
 		</div>
 		<hr>
 		<div id=calculator class=projects>
-			<h2>ENSF 409: Calculator Android App</h2>
+			<h2>ENSF 409: Calculator Android App (March 2017)</h2>
 			<p><a href="https://github.com/Sadat21/Calculator">Source Code</a></p>
 			<p>
 				A generic calculator app for Android. This was my first experience working
@@ -124,7 +124,7 @@
 		</div>
 		<hr>
 		<div id=game class=projects>
-			<h2>ENGG 233: Ring Runner Game</h2>
+			<h2>ENGG 233: Ring Runner Game (December 2015)</h2>
 			<p><a href="https://github.com/Brian-Pho/Ring-Runner-Game">Source Code</a></p>
 			<p>
 				My first major project after taking my first programming course. 
