Updated Github Links and Organized Pictures

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -55,7 +55,7 @@
 		<hr>
 		<div id=library class=projects>
 			<h2>CPSC 471: Library Database Management System (June 2017)</h2>
-			<p><a href="https://github.com/Brian-Pho/Library-App">Source Code</a></p>
+			<p><a href="https://github.com/Brian-Pho/CPSC471_Library-App">Source Code</a></p>
 			<p>
 				While this project was part of my database class, it can be thought of as
 				a continuation and combination of my last two projects. This project was
@@ -73,21 +73,21 @@
 				Overall, this project was very challenging but I learned a lot from it.
 			</p>
 			<figure>
-				<img src="../images/library1.png" alt="Library 1" width="233" height="426"/>
-				<img src="../images/library2.png" alt="Library 2" width="233" height="426"/>
-				<img src="../images/library3.png" alt="Library 3" width="233" height="426"/>
-				<img src="../images/library4.png" alt="Library 4" width="233" height="426"/>
-				<img src="../images/library5.png" alt="Library 5" width="233" height="426"/>
-				<img src="../images/library6.png" alt="Library 6" width="233" height="426"/>
-				<img src="../images/library7.png" alt="Library 7" width="233" height="426"/>
-				<img src="../images/library8.png" alt="Library 8" width="233" height="426"/>
-				<img src="../images/library9.png" alt="Library 9" width="233" height="426"/>
+				<img src="../images/Library/library1.png" alt="Library 1" width="233" height="426"/>
+				<img src="../images/Library/library2.png" alt="Library 2" width="233" height="426"/>
+				<img src="../images/Library/library3.png" alt="Library 3" width="233" height="426"/>
+				<img src="../images/Library/library4.png" alt="Library 4" width="233" height="426"/>
+				<img src="../images/Library/library5.png" alt="Library 5" width="233" height="426"/>
+				<img src="../images/Library/library6.png" alt="Library 6" width="233" height="426"/>
+				<img src="../images/Library/library7.png" alt="Library 7" width="233" height="426"/>
+				<img src="../images/Library/library8.png" alt="Library 8" width="233" height="426"/>
+				<img src="../images/Library/library9.png" alt="Library 9" width="233" height="426"/>
 			</figure>
 		</div>
 		<hr>
 		<div id=airline class=projects>
 			<h2>ENSF 409: Airlines Registration (April 2017)</h2>
-			<p><a href="https://github.com/Sadat21/AirlinesRegistrationSystem">Source Code</a></p>
+			<p><a href="https://github.com/Brian-Pho/ENSF409_Airlines-Registration-System">Source Code</a></p>
 			<p>
 				This was my first project that involved the use of a database (mySQL). This project was
 				done in a group of three where I had the role of designing the UI for
@@ -101,15 +101,15 @@
 				to and from there destination. Only admins are able to add and view all tickets.
 			</p>
 			<figure>
-				<img src="../images/airlines1.png" alt="Airlines 1" width="500" height="237.5"/>
-				<img src="../images/airlines2.png" alt="Airlines 2" width="523" height="340"/>
-				<img src="../images/airlines3.png" alt="Airlines 3" width="700" height="340"/>
+				<img src="../images/Airlines/airlines1.png" alt="Airlines 1" width="500" height="237.5"/>
+				<img src="../images/Airlines/airlines2.png" alt="Airlines 2" width="523" height="340"/>
+				<img src="../images/Airlines/airlines3.png" alt="Airlines 3" width="700" height="340"/>
 			</figure>
 		</div>
 		<hr>
 		<div id=calculator class=projects>
 			<h2>ENSF 409: Calculator Android App (March 2017)</h2>
-			<p><a href="https://github.com/Sadat21/Calculator">Source Code</a></p>
+			<p><a href="https://github.com/Brian-Pho/ENSF409-Calculator">Source Code</a></p>
 			<p>
 				A generic calculator app for Android. This was my first experience working
 				with Android Studio and Java. There were many small quirks that we had to
@@ -117,15 +117,15 @@
 				chaining operations.
 			</p>
 			<figure>
-				<img src="../images/calculator1.png" alt="Calculator 1" width="233" height="426"/>
-				<img src="../images/calculator2.png" alt="Calculator 2" width="233" height="426"/>
-				<img src="../images/calculator3.png" alt="Calculator 3" width="233" height="426"/>
+				<img src="../images/Calculator/calculator1.png" alt="Calculator 1" width="233" height="426"/>
+				<img src="../images/Calculator/calculator2.png" alt="Calculator 2" width="233" height="426"/>
+				<img src="../images/Calculator/calculator3.png" alt="Calculator 3" width="233" height="426"/>
 			</figure>
 		</div>
 		<hr>
 		<div id=game class=projects>
 			<h2>ENGG 233: Ring Runner Game (December 2015)</h2>
-			<p><a href="https://github.com/Brian-Pho/Ring-Runner-Game">Source Code</a></p>
+			<p><a href="https://github.com/Brian-Pho/ENGG233_Ring-Runner-Game">Source Code</a></p>
 			<p>
 				My first major project after taking my first programming course. 
 				The project I chose to do was an original game programmed in 
@@ -136,9 +136,9 @@
 				functions.
 			</p>
 			<figure>
-				<img src="../images/ringrunner1.png" alt="Ring Runner 1" width="351" height="363.5"/>
-				<img src="../images/ringrunner2.png" alt="Ring Runner 2" width="351" height="363.5"/>
-				<img src="../images/ringrunner3.png" alt="Ring Runner 3" width="351" height="363.5"/>
+				<img src="../images/RingRunner/ringrunner1.png" alt="Ring Runner 1" width="351" height="363.5"/>
+				<img src="../images/RingRunner/ringrunner2.png" alt="Ring Runner 2" width="351" height="363.5"/>
+				<img src="../images/RingRunner/ringrunner3.png" alt="Ring Runner 3" width="351" height="363.5"/>
 			</figure>
 		</div>
 		<hr>
