A few minor updates

--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -24,9 +24,9 @@
 		</header>
 		<h1>Gallery</h1>
 		<figure>
-			<img src="../images/brianpho1.jpg" alt="A picture of me" width="312" height="416"/>
-			<img src="../images/brianpho2.jpg" alt="A picture of me" width="360" height="480"/>
-			<img src="../images/brianpho3.jpg" alt="A picture of me" width="640" height="480"/>
+			<img src="../images/BrianPho/brianpho1.jpg" alt="A picture of me" width="312" height="416"/>
+			<img src="../images/BrianPho/brianpho2.jpg" alt="A picture of me" width="360" height="480"/>
+			<img src="../images/BrianPho/brianpho3.jpg" alt="A picture of me" width="640" height="480"/>
 		</figure>
 		<hr>
 		<p id="backtotop"><a href="#top">Back to Top</a></p>
