Added Bug Tracking Project

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -31,6 +31,38 @@
 		</p>
 		<hr>
 		<!-- Find additional project colors here: http://www.tayloredmktg.com/rgb/ -->
+		<div id=bugtracking class=projects>
+			<h2>ENSF 480: Bug Tracking System (Nov 2017)</h2>
+			<p><a href="https://github.com/Brian-Pho/ENSF480_Bug-Tracking-System">Source Code</a></p>
+			<p>
+				This project was done in a group of three where the goal was to create a bug tracking system using a software engineering
+				design methodology. Due to the nature of being in school, we only had time to do a simple linear development process which has
+				analysis, design, and implementation phase. The analysis phase included creating a use-case diagram, sequence diagram, and activity diagram
+				for obtaining a high level overview of the functional requirements and constraints. The design phase then moved onto more detailed 
+				diagrams such as a UML class diagram, deployment diagram, and state transition diagram for a bug. Lastly, the project was implemented
+				in Java where Git and IntelliJ were used to program the project.
+			</p>
+			<p>
+				The project is a system used by developers and managers for tracking software bugs reported by users. A user is able to submit a 
+				bug report that is then approved by the manager. Once the manager approves/disapproves of the bug, it is then assigned to a developer
+				to fix. When the bug is fixed, the developer marks the bug as fixed and carries on. This project did not require the use of a database
+				so a simple text file was used.
+			</p>
+			<p>
+				From this project I learned how a software engineer might go through the process of developing a good piece of software. It was interesting 
+				how the initial analysis and design phases made it easier to implement the program afterwards as most of the thinking had been done during 
+				those two phases. The implementation just required converting the diagrams into code which isn't too bad. I had some fun times during the project
+				such as implementing a singleton design pattern for the login and creating the GUIs.
+			</p>
+			<figure>
+				<img src="../images/BugTracking/bugtracking1.png" alt="Bug Tracking 1" width="286" height="153"/>
+				<img src="../images/BugTracking/bugtracking2.png" alt="Bug Tracking 2" width="236" height="183"/>
+				<img src="../images/BugTracking/bugtracking3.png" alt="Bug Tracking 3" width="700" height="333.41"/>
+				<img src="../images/BugTracking/bugtracking4.png" alt="Bug Tracking 4" width="700" height="504.11"/>
+				<img src="../images/BugTracking/bugtracking5.png" alt="Bug Tracking 5" width="700" height="444.64"/>
+			</figure>
+		</div>
+		<hr>
 		<div id=website class=projects>
 			<h2>Personal: Github Pages Website (July 2017)</h2>
 			<p><a href="https://github.com/Brian-Pho/Brian-Pho.github.io">Source Code</a></p>
