Added more pictures of me and updated resume

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -25,8 +25,7 @@
 		<h1>Projects</h1>
 		<p>
 			The following are projects that I have been involved in. The list is ordered with the most recent project
-			at the top. By ordering the projects in reverse chronological order the progress I've made can be seen. Most of the
-			projects have been a part of school but this website is a personal endeavor. My GitHub can be found
+			at the top. Most of the projects have been a part of school but this website is a personal endeavor. My GitHub can be found
 			<a href="https://github.com/Brian-Pho"> here</a>.
 		</p>
 		<hr>
@@ -55,11 +54,11 @@
 				such as implementing a singleton design pattern for the login and creating the GUIs.
 			</p>
 			<figure>
-				<img src="../images/BugTracking/bugtracking1.png" alt="Bug Tracking 1" width="286" height="153"/>
-				<img src="../images/BugTracking/bugtracking2.png" alt="Bug Tracking 2" width="236" height="183"/>
-				<img src="../images/BugTracking/bugtracking3.png" alt="Bug Tracking 3" width="700" height="333.41"/>
-				<img src="../images/BugTracking/bugtracking4.png" alt="Bug Tracking 4" width="700" height="504.11"/>
-				<img src="../images/BugTracking/bugtracking5.png" alt="Bug Tracking 5" width="700" height="444.64"/>
+				<img src="../Images/BugTracking/bugtracking1.png" alt="Bug Tracking 1" width="286" height="153"/>
+				<img src="../Images/BugTracking/bugtracking2.png" alt="Bug Tracking 2" width="236" height="183"/>
+				<img src="../Images/BugTracking/bugtracking3.png" alt="Bug Tracking 3" width="700" height="333.41"/>
+				<img src="../Images/BugTracking/bugtracking4.png" alt="Bug Tracking 4" width="700" height="504.11"/>
+				<img src="../Images/BugTracking/bugtracking5.png" alt="Bug Tracking 5" width="700" height="444.64"/>
 			</figure>
 		</div>
 		<hr>
@@ -83,6 +82,10 @@
 				This website is currently hosted using Github Pages. The header 
 				font is Open Sans and the text font is Roboto which are provided by Google Fonts. 
 			</p>
+			<figure>
+				<img src="../Images/Website/website1.png" alt="Bug Tracking 1" width="700" height="382.81"/>
+				<img src="../Images/Website/website2.png" alt="Bug Tracking 2" width="700" height="382.81"/>
+			</figure>
 		</div>
 		<hr>
 		<div id=library class=projects>
@@ -105,15 +108,15 @@
 				Overall, this project was very challenging but I learned a lot from it.
 			</p>
 			<figure>
-				<img src="../images/Library/library1.png" alt="Library 1" width="233" height="426"/>
-				<img src="../images/Library/library2.png" alt="Library 2" width="233" height="426"/>
-				<img src="../images/Library/library3.png" alt="Library 3" width="233" height="426"/>
-				<img src="../images/Library/library4.png" alt="Library 4" width="233" height="426"/>
-				<img src="../images/Library/library5.png" alt="Library 5" width="233" height="426"/>
-				<img src="../images/Library/library6.png" alt="Library 6" width="233" height="426"/>
-				<img src="../images/Library/library7.png" alt="Library 7" width="233" height="426"/>
-				<img src="../images/Library/library8.png" alt="Library 8" width="233" height="426"/>
-				<img src="../images/Library/library9.png" alt="Library 9" width="233" height="426"/>
+				<img src="../Images/Library/library1.png" alt="Library 1" width="233" height="426"/>
+				<img src="../Images/Library/library2.png" alt="Library 2" width="233" height="426"/>
+				<img src="../Images/Library/library3.png" alt="Library 3" width="233" height="426"/>
+				<img src="../Images/Library/library4.png" alt="Library 4" width="233" height="426"/>
+				<img src="../Images/Library/library5.png" alt="Library 5" width="233" height="426"/>
+				<img src="../Images/Library/library6.png" alt="Library 6" width="233" height="426"/>
+				<img src="../Images/Library/library7.png" alt="Library 7" width="233" height="426"/>
+				<img src="../Images/Library/library8.png" alt="Library 8" width="233" height="426"/>
+				<img src="../Images/Library/library9.png" alt="Library 9" width="233" height="426"/>
 			</figure>
 		</div>
 		<hr>
@@ -133,9 +136,9 @@
 				to and from there destination. Only admins are able to add and view all tickets.
 			</p>
 			<figure>
-				<img src="../images/Airlines/airlines1.png" alt="Airlines 1" width="500" height="237.5"/>
-				<img src="../images/Airlines/airlines2.png" alt="Airlines 2" width="523" height="340"/>
-				<img src="../images/Airlines/airlines3.png" alt="Airlines 3" width="700" height="340"/>
+				<img src="../Images/Airlines/airlines1.png" alt="Airlines 1" width="500" height="237.5"/>
+				<img src="../Images/Airlines/airlines2.png" alt="Airlines 2" width="523" height="340"/>
+				<img src="../Images/Airlines/airlines3.png" alt="Airlines 3" width="700" height="340"/>
 			</figure>
 		</div>
 		<hr>
@@ -149,9 +152,9 @@
 				chaining operations.
 			</p>
 			<figure>
-				<img src="../images/Calculator/calculator1.png" alt="Calculator 1" width="233" height="426"/>
-				<img src="../images/Calculator/calculator2.png" alt="Calculator 2" width="233" height="426"/>
-				<img src="../images/Calculator/calculator3.png" alt="Calculator 3" width="233" height="426"/>
+				<img src="../Images/Calculator/calculator1.png" alt="Calculator 1" width="233" height="426"/>
+				<img src="../Images/Calculator/calculator2.png" alt="Calculator 2" width="233" height="426"/>
+				<img src="../Images/Calculator/calculator3.png" alt="Calculator 3" width="233" height="426"/>
 			</figure>
 		</div>
 		<hr>
@@ -168,9 +171,9 @@
 				functions.
 			</p>
 			<figure>
-				<img src="../images/RingRunner/ringrunner1.png" alt="Ring Runner 1" width="351" height="363.5"/>
-				<img src="../images/RingRunner/ringrunner2.png" alt="Ring Runner 2" width="351" height="363.5"/>
-				<img src="../images/RingRunner/ringrunner3.png" alt="Ring Runner 3" width="351" height="363.5"/>
+				<img src="../Images/RingRunner/ringrunner1.png" alt="Ring Runner 1" width="351" height="363.5"/>
+				<img src="../Images/RingRunner/ringrunner2.png" alt="Ring Runner 2" width="351" height="363.5"/>
+				<img src="../Images/RingRunner/ringrunner3.png" alt="Ring Runner 3" width="351" height="363.5"/>
 			</figure>
 		</div>
 		<hr>
