Added favourite quotes and Rename couses

--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -25,7 +25,7 @@
 		<h1>Courses Taken</h1>
 		<p>
 			I am currently taking a bachelors of science with a major in software engineering. 
-			At the University of Calgary the semesters run as follows:
+			At the University of Calgary, the semesters run as follows:
 			<u1>
 				<li>FALL: Sept - Dec (4 months)</li>
 				<li>WINTER: Jan - Apr (4 months)</li>
