--- a/HTML/about.html
+++ b/HTML/about.html
@@ -37,6 +37,7 @@
 			<li>Video Games (League of Legends, CS:GO, Starcraft 2)</li>
 			<li>Swimming</li>
 			<li>Binge watching TV shows and anime</li>
+			<li><a href="https://myanimelist.net/profile/Brainiac777">MyAnimeList</a><br></li>
 		</ul>
 		<hr>
 		<h2>Passions</h2>
@@ -52,6 +53,46 @@
 			<li>Investing (index funds)</li>
 			<li>IT stuff (the family IT guy)</li>
 		</ul>
+		<hr>
+		<h2>Favourite Quotes</h2>
+		<p id="quote">
+			"Then you don’t remember a world without robots. There was a time when humanity faced the universe alone and without a friend. Now he has creatures to help him; stronger creatures than himself, more faithful, more useful, and absolutely devoted to him. Mankind is no longer alone. Have you ever thought of it that way?"
+		<br>
+		<i>I, Robot ~ Isaac Asimov</i>
+		</p>
+		<p id="quote">
+		“Loneliness does not come from having no people about one, but from being unable to communicate the things that seem important to oneself, or from holding certain views which others find inadmissible.”
+		<br>
+		<i>C.G. Jung</i>
+		</p>
+		<p id="quote">
+		“No, it’s impossible. It’s impossible to tell anyone what it feels like to be you. It’s impossible. We live the same way that we dream - alone.”
+		<br>
+		<i>Heart of Darkness ~ Joseph Conrad</i>
+		</p>
+		<p id="quote">
+		“You know that place between asleep and awake,
+		Where you can still remember dreams,
+		That's where I'll always love,
+		And that's where I'll be waiting.”
+		<br>
+		<i>Peter Pan ~ J.M. Barrie</i>
+		</p>
+		<p id="quote">
+		"People want to be loved; failing that, admired; failing that, feared; failing that, hated and despised. They want to evoke some sort of sentiment. The soul shudders before oblivion and seeks connection at any price."
+		<br>
+		<i>Doctor Glas ~ Hjalmar Söderberg</i>
+		</p>
+		<p id="quote">
+		“Perhaps it's impossible to wear an identity without becoming what you pretend to be.”
+		<br>
+		<i>Ender's Game ~ Orson Scott Card</i>
+		</p>
+		<p id="quote">
+		“If a man will begin with certainties, he shall end in doubts; but if he will be content to begin with doubts, he shall end in certainties.”
+		<br>
+		<i>Francis Bacon</i>
+		</p>
 		<hr>
 		<p id="backtotop"><a href="#top">Back to Top</a></p>
 	</body>
