--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,7 +15,7 @@
 				<ul>
 					<!-- Linking using relative URL -->
 					<li><a id="home" class="on" href="index.html">Home</a></li>
-					<li><a id="courses" href="couses.html">Courses</a></li>
+					<li><a id="courses" href="courses.html">Courses</a></li>
 					<li><a id="projects" href="projects.html">Projects</a></li>
 					<li><a id="gallery" href="gallery.html">Gallery</a></li>
 					<li><a id="about" href="about.html">About</a></li>
