--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -14,7 +14,7 @@
 			<nav>
 				<ul>
 					<li><a id="home" href="index.html">Home</a></li>
-					<li><a id="courses" href="couses.html">Courses</a></li>
+					<li><a id="courses" href="courses.html">Courses</a></li>
 					<li><a id="projects" href="projects.html">Projects</a></li>
 					<li><a id="gallery" href="gallery.html">Gallery</a></li>
 					<li><a id="about" href="about.html">About</a></li>
