Made all images clickable

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -36,15 +36,15 @@
 			<p>
 				This project was done in a group of three where the goal was to create a bug tracking system using a software engineering
 				design methodology. Due to the nature of being in school, we only had time to do a simple linear development process which has
-				analysis, design, and implementation phase. The analysis phase included creating a use-case diagram, sequence diagram, and activity diagram
+				an analysis, design, and implementation phase. The analysis phase included creating a use-case diagram, sequence diagram, and activity diagram
 				for obtaining a high level overview of the functional requirements and constraints. The design phase then moved onto more detailed 
 				diagrams such as a UML class diagram, deployment diagram, and state transition diagram for a bug. Lastly, the project was implemented
-				in Java where Git and IntelliJ were used to program the project.
+				in Java where Git and IntelliJ were used to code the project.
 			</p>
 			<p>
 				The project is a system used by developers and managers for tracking software bugs reported by users. A user is able to submit a 
 				bug report that is then approved by the manager. Once the manager approves/disapproves of the bug, it is then assigned to a developer
-				to fix. When the bug is fixed, the developer marks the bug as fixed and carries on. This project did not require the use of a database
+				to be fixed. When the bug is fixed, the developer marks the bug as fixed and carries on. This project did not require the use of a database
 				so a simple text file was used.
 			</p>
 			<p>
@@ -54,11 +54,11 @@
 				such as implementing a singleton design pattern for the login and creating the GUIs.
 			</p>
 			<figure>
-				<img src="../Images/BugTracking/bugtracking1.png" alt="Bug Tracking 1" width="286" height="153"/>
-				<img src="../Images/BugTracking/bugtracking2.png" alt="Bug Tracking 2" width="236" height="183"/>
-				<img src="../Images/BugTracking/bugtracking3.png" alt="Bug Tracking 3" width="700" height="333.41"/>
-				<img src="../Images/BugTracking/bugtracking4.png" alt="Bug Tracking 4" width="700" height="504.11"/>
-				<img src="../Images/BugTracking/bugtracking5.png" alt="Bug Tracking 5" width="700" height="444.64"/>
+				<a href="../Images/BugTracking/bugtracking1.png"><img src="../Images/BugTracking/bugtracking1.png" alt="Bug Tracking 1" width="286" height="153"/></a>
+				<a href="../Images/BugTracking/bugtracking2.png"><img src="../Images/BugTracking/bugtracking2.png" alt="Bug Tracking 2" width="236" height="183"/></a>
+				<a href="../Images/BugTracking/bugtracking3.png"><img src="../Images/BugTracking/bugtracking3.png" alt="Bug Tracking 3" width="700" height="333.41"/></a>
+				<a href="../Images/BugTracking/bugtracking4.png"><img src="../Images/BugTracking/bugtracking4.png" alt="Bug Tracking 4" width="700" height="504.11"/></a>
+				<a href="../Images/BugTracking/bugtracking5.png"><img src="../Images/BugTracking/bugtracking5.png" alt="Bug Tracking 5" width="700" height="444.64"/></a>
 			</figure>
 		</div>
 		<hr>
@@ -83,8 +83,8 @@
 				font is Open Sans and the text font is Roboto which are provided by Google Fonts. 
 			</p>
 			<figure>
-				<img src="../Images/Website/website1.png" alt="Bug Tracking 1" width="700" height="382.81"/>
-				<img src="../Images/Website/website2.png" alt="Bug Tracking 2" width="700" height="382.81"/>
+				<a href="../Images/Website/website1.png"><img src="../Images/Website/website1.png" alt="Bug Tracking 1" width="700" height="382.81"/></a>
+				<a href="../Images/Website/website2.png"><img src="../Images/Website/website2.png" alt="Bug Tracking 2" width="700" height="382.81"/></a>
 			</figure>
 		</div>
 		<hr>
@@ -108,15 +108,15 @@
 				Overall, this project was very challenging but I learned a lot from it.
 			</p>
 			<figure>
-				<img src="../Images/Library/library1.png" alt="Library 1" width="233" height="426"/>
-				<img src="../Images/Library/library2.png" alt="Library 2" width="233" height="426"/>
-				<img src="../Images/Library/library3.png" alt="Library 3" width="233" height="426"/>
-				<img src="../Images/Library/library4.png" alt="Library 4" width="233" height="426"/>
-				<img src="../Images/Library/library5.png" alt="Library 5" width="233" height="426"/>
-				<img src="../Images/Library/library6.png" alt="Library 6" width="233" height="426"/>
-				<img src="../Images/Library/library7.png" alt="Library 7" width="233" height="426"/>
-				<img src="../Images/Library/library8.png" alt="Library 8" width="233" height="426"/>
-				<img src="../Images/Library/library9.png" alt="Library 9" width="233" height="426"/>
+				<a href="../Images/Library/library1.png"><img src="../Images/Library/library1.png" alt="Library 1" width="233" height="426"/></a>
+				<a href="../Images/Library/library2.png"><img src="../Images/Library/library2.png" alt="Library 2" width="233" height="426"/></a>
+				<a href="../Images/Library/library3.png"><img src="../Images/Library/library3.png" alt="Library 3" width="233" height="426"/></a>
+				<a href="../Images/Library/library4.png"><img src="../Images/Library/library4.png" alt="Library 4" width="233" height="426"/></a>
+				<a href="../Images/Library/library5.png"><img src="../Images/Library/library5.png" alt="Library 5" width="233" height="426"/></a>
+				<a href="../Images/Library/library6.png"><img src="../Images/Library/library6.png" alt="Library 6" width="233" height="426"/></a>
+				<a href="../Images/Library/library7.png"><img src="../Images/Library/library7.png" alt="Library 7" width="233" height="426"/></a>
+				<a href="../Images/Library/library8.png"><img src="../Images/Library/library8.png" alt="Library 8" width="233" height="426"/></a>
+				<a href="../Images/Library/library9.png"><img src="../Images/Library/library9.png" alt="Library 9" width="233" height="426"/></a>
 			</figure>
 		</div>
 		<hr>
@@ -136,9 +136,9 @@
 				to and from there destination. Only admins are able to add and view all tickets.
 			</p>
 			<figure>
-				<img src="../Images/Airlines/airlines1.png" alt="Airlines 1" width="500" height="237.5"/>
-				<img src="../Images/Airlines/airlines2.png" alt="Airlines 2" width="523" height="340"/>
-				<img src="../Images/Airlines/airlines3.png" alt="Airlines 3" width="700" height="340"/>
+				<a href="../Images/Airlines/airlines1.png"><img src="../Images/Airlines/airlines1.png" alt="Airlines 1" width="500" height="237.5"/></a>
+				<a href="../Images/Airlines/airlines2.png"><img src="../Images/Airlines/airlines2.png" alt="Airlines 2" width="523" height="340"/></a>
+				<a href="../Images/Airlines/airlines3.png"><img src="../Images/Airlines/airlines3.png" alt="Airlines 3" width="700" height="340"/></a>
 			</figure>
 		</div>
 		<hr>
@@ -152,9 +152,9 @@
 				chaining operations.
 			</p>
 			<figure>
-				<img src="../Images/Calculator/calculator1.png" alt="Calculator 1" width="233" height="426"/>
-				<img src="../Images/Calculator/calculator2.png" alt="Calculator 2" width="233" height="426"/>
-				<img src="../Images/Calculator/calculator3.png" alt="Calculator 3" width="233" height="426"/>
+				<a href="../Images/Calculator/calculator1.png"><img src="../Images/Calculator/calculator1.png" alt="Calculator 1" width="233" height="426"/></a>
+				<a href="../Images/Calculator/calculator2.png"><img src="../Images/Calculator/calculator2.png" alt="Calculator 2" width="233" height="426"/></a>
+				<a href="../Images/Calculator/calculator3.png"><img src="../Images/Calculator/calculator3.png" alt="Calculator 3" width="233" height="426"/></a>
 			</figure>
 		</div>
 		<hr>
@@ -171,9 +171,9 @@
 				functions.
 			</p>
 			<figure>
-				<img src="../Images/RingRunner/ringrunner1.png" alt="Ring Runner 1" width="351" height="363.5"/>
-				<img src="../Images/RingRunner/ringrunner2.png" alt="Ring Runner 2" width="351" height="363.5"/>
-				<img src="../Images/RingRunner/ringrunner3.png" alt="Ring Runner 3" width="351" height="363.5"/>
+				<a href="../Images/RingRunner/ringrunner1.png"><img src="../Images/RingRunner/ringrunner1.png" alt="Ring Runner 1" width="351" height="363.5"/></a>
+				<a href="../Images/RingRunner/ringrunner2.png"><img src="../Images/RingRunner/ringrunner2.png" alt="Ring Runner 2" width="351" height="363.5"/></a>
+				<a href="../Images/RingRunner/ringrunner3.png"><img src="../Images/RingRunner/ringrunner3.png" alt="Ring Runner 3" width="351" height="363.5"/></a>
 			</figure>
 		</div>
 		<hr>
