--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -24,12 +24,12 @@
 		</header>
 		<h1>Gallery</h1>
 		<figure>
-			<img src="../Images/BrianPho/brianpho1.jpg" alt="A picture of me" width="350" height="466.67"/>
-			<img src="../Images/BrianPho/brianpho2.jpg" alt="A picture of me" width="350" height="466.67"/>
-			<img src="../Images/BrianPho/brianpho3.jpg" alt="A picture of me" width="700" height="525"/>
-			<img src="../Images/BrianPho/brianpho4.jpg" alt="A picture of me" width="700" height="525"/>
-			<img src="../Images/BrianPho/brianpho5.jpg" alt="A picture of me" width="350" height="466.67"/>
-			<img src="../Images/BrianPho/brianpho6.jpg" alt="A picture of me" width="350" height="466.67"/>
+			<a href="../Images/BrianPho/brianpho1.jpg"><img src="../Images/BrianPho/brianpho1.jpg" alt="A picture of me" width="350" height="466.67"/></a>
+			<a href="../Images/BrianPho/brianpho2.jpg"><img src="../Images/BrianPho/brianpho2.jpg" alt="A picture of me" width="350" height="466.67"/></a>
+			<a href="../Images/BrianPho/brianpho3.jpg"><img src="../Images/BrianPho/brianpho3.jpg" alt="A picture of me" width="700" height="525"/></a>
+			<a href="../Images/BrianPho/brianpho4.jpg"><img src="../Images/BrianPho/brianpho4.jpg" alt="A picture of me" width="700" height="525"/></a>
+			<a href="../Images/BrianPho/brianpho5.jpg"><img src="../Images/BrianPho/brianpho5.jpg" alt="A picture of me" width="350" height="466.67"/></a>
+			<a href="../Images/BrianPho/brianpho6.jpg"><img src="../Images/BrianPho/brianpho6.jpg" alt="A picture of me" width="350" height="466.67"/></a>
 		</figure>
 		<hr>
 		<p id="backtotop"><a href="#top">Back to Top</a></p>
